--- a/knowage/src/main/webapp/themes/commons/css/SASS/components/_misc.scss
+++ b/knowage/src/main/webapp/themes/commons/css/SASS/components/_misc.scss
@@ -433,7 +433,7 @@ md-icon {
 	margin:0 !important;
 }
 
-.noPadding{
+.noPadding, .noPadding ._md-subheader-inner{
 	padding:0px;
 }
 
